// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`htmlToTextPlugin absent does not keep HTML in text 1`] = `null`;

exports[`htmlToTextPlugin present keeps HTML in text 1`] = `
"<div>
<script>console.error('This error should not be logged from renderText.test.js!')</script>
</div>"
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks around a blockquote 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <blockquote>
    

    <p>
      b
    </p>
    

  </blockquote>,
  "
",
  <p>
    c
  </p>,
]
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks around a code block 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <p>
    <code>
      b
    </code>
  </p>,
  "
",
  <p>
    c
  </p>,
]
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks around a horizontal rule 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  "
",
  <p>
    b
  </p>,
]
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks around a strikethrough 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <p>
    ~~xxx~~
  </p>,
  "
",
  <p>
    b
  </p>,
]
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks around a table 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <p>
    | a | b  |  c |  d  |
| - | :- | -: | :-: |
| a | b  |  c |  d  |
  </p>,
  "
",
  <p>
    c
  </p>,
]
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks between paragraphs 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <p>
    b
  </p>,
  "
",
  <p>
    c
  </p>,
]
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks between the items in an ordered list 1`] = `
<ol>
  

  <li>
    

    <p>
      item 1
    </p>
    

  </li>
  

  <li>
    

    <p>
      item 2
    </p>
    

  </li>
  

  <li>
    

    <p>
      item 3
    </p>
    

  </li>
  

</ol>
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks between the items in an unordered list 1`] = `
<ul>
  

  <li>
    

    <p>
      item 1
    </p>
    

  </li>
  

  <li>
    

    <p>
      item 2
    </p>
    

  </li>
  

  <li>
    

    <p>
      item 3
    </p>
    

  </li>
  

</ul>
`;

exports[`keepLineBreaksPlugin absent does not keep line breaks under a heading 1`] = `
Array [
  "Heading",
  "
",
  <p>
    a
  </p>,
]
`;

exports[`keepLineBreaksPlugin present keeps line between lines with strong text 1`] = `
Array [
  <p>
    This is 
    <strong>
      the first
    </strong>
     line
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    This is the second line
  </p>,
]
`;

exports[`keepLineBreaksPlugin present keeps line breaks around a blockquote 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <blockquote>
    

    <p>
      b
    </p>
    

  </blockquote>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    c
  </p>,
]
`;

exports[`keepLineBreaksPlugin present keeps line breaks around a code block 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    <code>
      b
    </code>
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    c
  </p>,
]
`;

exports[`keepLineBreaksPlugin present keeps line breaks around a horizontal rule 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    b
  </p>,
]
`;

exports[`keepLineBreaksPlugin present keeps line breaks around a strikethrough 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    ~~xxx~~
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    b
  </p>,
]
`;

exports[`keepLineBreaksPlugin present keeps line breaks around a table 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    | a | b  |  c |  d  |
| - | :- | -: | :-: |
| a | b  |  c |  d  |
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    c
  </p>,
]
`;

exports[`keepLineBreaksPlugin present keeps line breaks between paragraphs 1`] = `
Array [
  <p>
    a
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    b
  </p>,
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    c
  </p>,
]
`;

exports[`keepLineBreaksPlugin present keeps line breaks between the items in an ordered list 1`] = `
<ol>
  

  <li>
    

    <p>
      item 1
    </p>
    

  </li>
  

  <br />
  

  

  

  <br />
  

  

  

  <li>
    

    <p>
      item 2
    </p>
    

  </li>
  

  <br />
  

  

  

  <br />
  

  

  

  <li>
    

    <p>
      item 3
    </p>
    

  </li>
  

</ol>
`;

exports[`keepLineBreaksPlugin present keeps line breaks between the items in an unordered list 1`] = `
<ul>
  

  <li>
    

    <p>
      item 1
    </p>
    

  </li>
  

  <br />
  

  

  

  <br />
  

  

  

  <li>
    

    <p>
      item 2
    </p>
    

  </li>
  

  <br />
  

  

  

  <br />
  

  

  

  <li>
    

    <p>
      item 3
    </p>
    

  </li>
  

</ul>
`;

exports[`keepLineBreaksPlugin present keeps line breaks under a heading 1`] = `
Array [
  "Heading",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <br />,
  "
",
  "
",
  "
",
  <p>
    a
  </p>,
]
`;

exports[`renderText handles the special case where there are pronouns in the name 1`] = `
<p>
  hey, 
  <span
    className="str-chat__message-mention"
    data-user-id="john"
  >
    @John (they/them)
  </span>
  , how are you?
</p>
`;

exports[`renderText handles the special case where there is a backslash in the name 1`] = `
<p>
  hey, 
  <span
    className="str-chat__message-mention"
    data-user-id="john"
  >
    @John\\Cena
  </span>
  , how are you?
</p>
`;

exports[`renderText handles the special case where there is a forward slash in the name 1`] = `
<p>
  hey, 
  <span
    className="str-chat__message-mention"
    data-user-id="john"
  >
    @John/Cena
  </span>
  , how are you?
</p>
`;

exports[`renderText handles the special case where there's at least one mention and @ symbol at the end 1`] = `
<p>
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   @
</p>
`;

exports[`renderText handles the special case where user name matches to an e-mail pattern - 1 1`] = `
<p>
  Hello 
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
  , is 
  <a
    className=""
    href="mailto:username@email.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
  >
    username@email.com
  </a>
   your @primary e-mail?
</p>
`;

exports[`renderText handles the special case where user name matches to an e-mail pattern - 2 1`] = `
<p>
  <a
    className=""
    href="mailto:username@email.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
  >
    username@email.com
  </a>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   is this the right address?
</p>
`;

exports[`renderText handles the special case where user name matches to an e-mail pattern - 3 1`] = `
<p>
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
</p>
`;

exports[`renderText handles the special case where user name matches to an e-mail pattern - 4 1`] = `
<p>
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <a
    className=""
    href="mailto:username@email.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
  >
    username@email.com
  </a>
   
  <span
    className="str-chat__message-mention"
    data-user-id="id-username@email.com"
  >
    @username@email.com
  </span>
</p>
`;

exports[`renderText renders custom mention 1`] = `
<p>
  <span
    className="my-mention"
    data-node-mentionedUser-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <span
    className="my-mention"
    data-node-mentionedUser-id="id-username@email.com"
  >
    @username@email.com
  </span>
   
  <a
    className=""
    href="mailto:username@email.com"
    rel="nofollow noreferrer noopener"
    target="_blank"
  >
    username@email.com
  </a>
   
  <span
    className="my-mention"
    data-node-mentionedUser-id="id-username@email.com"
  >
    @username@email.com
  </span>
</p>
`;

exports[`renderText renders remark-gfm list and strikethrough correctly 1`] = `
Array [
  <p>
    Pick a time to meet:
  </p>,
  "
",
  <ul>
    

    <li>
      Wednesday
    </li>
    

    <li>
      Thursday
    </li>
    

    <li>
      <del>
        Sunday
      </del>
    </li>
    

    <li>
      ~Monday~
    </li>
    

  </ul>,
]
`;

exports[`renderText renders standard markdown text 1`] = `
<p>
  Hi, shall we meet on 
  <strong>
    Tuesday
  </strong>
  ?
</p>
`;
